# AirSim

AirLib/include/common/: AirSimSettings.hpp
PythonClient/: requirements.txt
PythonClient/computer_vision/: agro_segmentation.py  cv_capture.py  cv_simple_move.py  rtsp_server.py  rtsp_server_2.py  segmentation.py
PythonClient/multirotor/: external_physics_engine.py  sweep_motion.py  sweep_motion_2.py
RtspStream/: main.cpp
Unreal/Plugins/AirSim/Source/: AirSim.Build.cs  PIPCamera.cpp
Unreal/Plugins/AirSim/Source/SimHUD/: SimHUD.cpp
Unreal/Plugins/AirSim/Source/Vehicles/ComputerVision/: SimModeComputerVision.cpp  SimModeComputerVision.h
cmake/: CMakeLists.txt
cmake/RtspStream/: CMakeLists.txt
docker/: Dockerfile_custom  Dockerfile_custom_from_source  docker-compose.yml  rtsp_opts.json  rtsp_opts_2.json  run_airsim_image_binary_with_extras.sh  server_script.sh  settings.json  start_task.sh  sweep_motion_g.py
